--- a/WasteClassification.ipynb
+++ b/WasteClassification.ipynb
@@ -102,7 +102,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/cardstdani/WasteClassificationNeuralNetwork.git"
+        "!git clone https://github.com/amitpanth/Detecting-Biodegradable-and-Non-Biodegradable-waste-from-image"
       ],
       "metadata": {
         "colab": {
